[package]
name = "gitopen"
version = "1.3.3"
authors = ["Oren Epshtain"]
edition = "2018"
license-file = "LICENSE"
description = """
Command line utility to open a git repository's web page from terminal,
as well as pull requests in the browser after the first push.
"""
homepage = "https://github.com/oren0e/gitopen"
documentation = "https://github.com/oren0e/gitopen"
repository = "https://github.com/oren0e/gitopen"
readme = "README.md"
keywords = ["git", "github", "pull-request", "repository", "gitlab"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".github/*", ".gitignore"]


[dependencies]
webbrowser = "0.8.7"
anyhow = "1.0.69"
regex = "1.7.1"
clap = "2.33.3"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
split-debuginfo = "unpacked"
